--- a/src/Dotnet9.Admin/index.html
+++ b/src/Dotnet9.Admin/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dotnet9后台</title>
+  <title>Dotnet9博客系统后台</title>
 </head>
 
 <body>
