--- a/src/Dotnet9.MAUI/wwwroot/index.html
+++ b/src/Dotnet9.MAUI/wwwroot/index.html
@@ -12,9 +12,11 @@
     <link href="_content/Masa.Blazor/css/masa-blazor.css" rel="stylesheet"/>
     <link href="_content/Masa.Blazor/css/masa-extend-blazor.css" rel="stylesheet"/>
 
+
     <link href="https://cdn.masastack.com/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
     <link href="https://cdn.masastack.com/npm/materialicons/materialicons.css" rel="stylesheet">
     <link href="https://cdn.masastack.com/npm/fontawesome/v5.0.13/css/all.css" rel="stylesheet">
+    <link href="_content/Dotnet9.WebApp/css/dotnet9-blazor-admin.css" rel="stylesheet"/>
 </head>
 
 <body>
