--- a/src/Dotnet9.Wasm/wwwroot/index.html
+++ b/src/Dotnet9.Wasm/wwwroot/index.html
@@ -2,20 +2,21 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <title>Dotnet9.Wasm</title>
-    <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/app.css" rel="stylesheet" />
-    <link href="Dotnet9.Wasm.styles.css" rel="stylesheet" />
+    <base href="/"/>
+    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet"/>
+    <link href="css/app.css" rel="stylesheet"/>
+    <link href="Dotnet9.Wasm.styles.css" rel="stylesheet"/>
 
-    <link href="_content/Masa.Blazor/css/masa-blazor.css" rel="stylesheet" />
-    <link href="_content/Masa.Blazor/css/masa-extend-blazor.css" rel="stylesheet" />
+    <link href="_content/Masa.Blazor/css/masa-blazor.css" rel="stylesheet"/>
+    <link href="_content/Masa.Blazor/css/masa-extend-blazor.css" rel="stylesheet"/>
 
     <link href="https://cdn.masastack.com/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
     <link href="https://cdn.masastack.com/npm/materialicons/materialicons.css" rel="stylesheet">
     <link href="https://cdn.masastack.com/npm/fontawesome/v5.0.13/css/all.css" rel="stylesheet">
+    <link href="_content/Dotnet9.WebApp/css/dotnet9-blazor-admin.css" rel="stylesheet"/>
 </head>
 
 <body>
