--- a/src/Dotnet9.AdminVue/index.html
+++ b/src/Dotnet9.AdminVue/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel ="shortcut icon" type="image/x-icon" href="/favicon.ico" rel="external nofollow"  rel="external nofollow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dotnet9网站后台</title>
   </head>
