--- a/src/Dotnet9.AdminReact/public/index.html
+++ b/src/Dotnet9.AdminReact/public/index.html
@@ -11,15 +11,15 @@
   <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
   <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/highlight.js/11.7.0/styles/github.min.css">
   <link rel="stylesheet" href="./app.css">
-  <title>Token Blog</title>
+  <title>Dotnet9</title>
   <script>
     var _hmt = _hmt || [];
-    (function() {
-      var hm = document.createElement("script");
-      hm.src = "https://hm.baidu.com/hm.js?8e2b7257157714a87d3d9726e1048bc4";
-      var s = document.getElementsByTagName("script")[0]; 
-      s.parentNode.insertBefore(hm, s);
-    })();
+            (function () {
+                var hm = document.createElement("script");
+                hm.src = "https://hm.baidu.com/hm.js?b1c5c62f256893710ae912468261bf6b";
+                var s = document.getElementsByTagName("script")[0];
+                s.parentNode.insertBefore(hm, s);
+            })();
     </script>
     
 </head>
