--- a/src/Dotnetools.Web/wwwroot/index.html
+++ b/src/Dotnetools.Web/wwwroot/index.html
@@ -24,8 +24,8 @@
                 s.parentNode.insertBefore(hm, s);
             })();
         </script>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8748951917303002"
-                crossorigin="anonymous"></script>
+        <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8748951917303002"
+                crossorigin="anonymous"></script> -->
     </environment>
 </head>
 
@@ -45,6 +45,7 @@
 <script src="_content/BlazorComponent/js/blazor-component.js"></script>
 <script src="js/minesweeper.js"></script>
 <script src="/js/utilities.js"></script>
+<script src="/js/rgb/color_convert.js"></script>
 <script type="module">
         import { BrotliDecode } from './js/decode.min.js';
 
