add baidu and google count;

--- a/src/Dotnetools/index.html
+++ b/src/Dotnetools/index.html
@@ -32,6 +32,17 @@
       content="为开发人员收集方便的在线工具，具有出色的用户体验。Dotnetools是一个免费开源的在线工具集合，为IT开发人员和工作人员提供方便。"
     />
     <meta property="og:image" content="https://it-tools.tech/banner.png?v=2" />
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?96b0fbecf9bc9efb7e5d7be8345dcb38";
+        var s = document.getElementsByTagName("script")[0]; 
+        s.parentNode.insertBefore(hm, s);
+      })();
+    </script>
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8748951917303002"
+      crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="app"></div>
