--- a/src/Dotnetools/index.html
+++ b/src/Dotnetools/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dotnetools - 为开发人员提供方便的在线工具</title>
-    <meta itemprop="name" content="Dotnetools - 为开发人员提供方便的在线工具" />
+    <title>Dotne工具箱 - 为开发人员提供方便的在线工具</title>
+    <meta itemprop="name" content="Dotne工具箱 - 为开发人员提供方便的在线工具" />
     <meta
       name="description"
-      content="为开发人员收集方便的在线工具，具有出色的用户体验。Dotnetools是一个免费开源的在线工具集合，为IT开发人员和工作人员提供方便。"
+      content="为开发人员收集方便的在线工具，具有出色的用户体验。Dotne工具箱是一个免费开源的在线工具集合，为IT开发人员和工作人员提供方便。"
     />
     <meta
       itemprop="description"
-      content="为开发人员收集方便的在线工具，具有出色的用户体验。Dotnetools是一个免费开源的在线工具集合，为IT开发人员和工作人员提供方便。"
+      content="为开发人员收集方便的在线工具，具有出色的用户体验。Dotne工具箱是一个免费开源的在线工具集合，为IT开发人员和工作人员提供方便。"
     />
     <link rel="author" href="humans.txt" />
     <link rel="canonical" href="https://dotnetools.com" />
@@ -26,10 +26,10 @@
 
     <meta property="og:url" content="https://dotnetools/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Dotnetools - 为开发人员提供方便的在线工具" />
+    <meta property="og:title" content="Dotne工具箱 - 为开发人员提供方便的在线工具" />
     <meta
       property="og:description"
-      content="为开发人员收集方便的在线工具，具有出色的用户体验。Dotnetools是一个免费开源的在线工具集合，为IT开发人员和工作人员提供方便。"
+      content="为开发人员收集方便的在线工具，具有出色的用户体验。Dotne工具箱是一个免费开源的在线工具集合，为IT开发人员和工作人员提供方便。"
     />
     <meta property="og:image" content="https://it-tools.tech/banner.png?v=2" />
     <script>
