--- a/src/Dotnet9.VueBlogSpa/index.html
+++ b/src/Dotnet9.VueBlogSpa/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>可乐不加冰-博客</title>
+    <title>Dotnet9-博客</title>
 </head>
 
 <body>
