--- a/src/Dotnet9.VueBlogSpa/index.html
+++ b/src/Dotnet9.VueBlogSpa/index.html
@@ -5,7 +5,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dotnet9-博客</title>
+    <title>Dotnet9</title>
+    <script>
+        var _hmt = _hmt || [];
+        (function () {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?b1c5c62f256893710ae912468261bf6b";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8748951917303002"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
